Complete responsive navbar using Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -23,10 +23,32 @@
       type="text/css"
     />
   </head>
-  <body>
+  <body class="max-w-[1920px] mx-auto">
     <header>
-      <nav>
-        <div></div>
+      <nav class="flex justify-between items-center px-4 py-2">
+        <div class="flex items-center gap-3">
+          <img class="md:w-16 w-10" src="./assets/logo.png" alt="" />
+          <h4 class="text-[#006747] font-extrabold text-md md:text-2xl">
+            Emergency <br />
+            Service
+          </h4>
+        </div>
+        <div class="flex justify-between items-center gap-0 md:gap-7">
+          <div
+            class="bg-[#41ff6b1a] px-2 py-2 md:px-5 md:py-5 rounded-full flex gap-2"
+          >
+            <span>0</span>❤
+          </div>
+          <div
+            class="flex gap-3 bg-[#41ff6b1a] px-2 py-2 md:px-5 md:py-5 rounded-full"
+          >
+            <span>100</span>
+            <img class="w-6" h-6 src="./assets/coin.png" alt="" />
+          </div>
+          <div class="bg-[#00A63E] rounded-full px-5 py-2 md:px-9 md:py-4">
+            <span>2</span> Copy
+          </div>
+        </div>
       </nav>
     </header>
     <main></main>
