--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   </head>
   <body class="max-w-[1920px] mx-auto">
     <header>
-      <nav class="flex justify-between items-center px-4 py-2">
+      <!-- Navbar menu Section -->
+      <nav class="flex justify-between items-center px-8 py-4">
         <div class="flex items-center gap-3">
           <img class="md:w-16 w-10" src="./assets/logo.png" alt="" />
           <h4 class="text-[#006747] font-extrabold text-md md:text-2xl">
@@ -33,6 +34,7 @@
             Service
           </h4>
         </div>
+        <!-- Right side section of Navbar -->
         <div class="flex justify-between items-center gap-0 md:gap-7">
           <div
             class="bg-[#41ff6b1a] px-2 py-2 md:px-5 md:py-5 rounded-full flex gap-2"
@@ -50,8 +52,29 @@
           </div>
         </div>
       </nav>
+      <!-- Banner container section -->
+      <section
+        class="banner-container py-8 bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] flex items-center justify-center"
+      >
+        <div class="text-center">
+          <img
+            class="w-24 h-24 mx-auto mb-3"
+            src="./assets/logo-dark.png"
+            alt=""
+          />
+          <h3 class="text-[#FFFFFF] mb-3 font-bold text-2xl md:text-4xl">
+            Emergency Service Directory
+          </h3>
+          <p class="text-[#FFFFFF] mb-3 font-semibold text-md md:text-xl">
+            Government Emergency Services at Your Fingertip – A Project by
+            Government of the People’s Republic of Bangladesh
+          </p>
+        </div>
+      </section>
     </header>
-    <main></main>
+    <main>
+      <section class="card-container bg-[##f5fff6] min-h-60"></section>
+    </main>
     <footer></footer>
   </body>
 </html>
