Project ready for deployment

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   alt=""
                 />
               </div>
-              <span id="heart-icon-main"
+              <span class="icon-heart-main"
                 ><i class="fa-regular fa-heart"></i
               ></span>
             </span>
@@ -116,14 +116,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i id="call-icon" class="fa-solid fa-phone"></i></span
                 >Call
@@ -142,7 +140,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Police Helpline Number
@@ -162,14 +162,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -187,7 +185,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Fire Service Number
@@ -207,14 +207,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -232,7 +230,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Ambulance Service
@@ -252,14 +252,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -277,7 +275,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Women & Child Helpline
@@ -299,14 +299,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -324,7 +322,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Anti-Corruption Helpline
@@ -344,14 +344,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -369,7 +367,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Electricity Helpline
@@ -389,14 +389,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -414,7 +412,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Brac Helpline
@@ -434,14 +434,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
@@ -459,7 +457,9 @@
                   alt=""
                 />
               </div>
-              <span><i class="fa-regular fa-heart"></i></span>
+              <span class="icon-heart-main"
+                ><i class="fa-regular fa-heart"></i
+              ></span>
             </span>
             <h3 class="font-bold text-[#111111] text-2xl mt-4">
               Bangladesh Railway Helpline
@@ -479,14 +479,12 @@
             <!-- card button herer -->
             <div class="bg-white flex gap-3 mt-4">
               <button
-                id="copy-btn"
-                class="btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
+                class="btn-copy btn btn-neutral !border-gray-300 w-1/2 !text-black !bg-[#FFFFFF]"
               >
                 <span><i class="fa-regular fa-clone"></i></span>Copy
               </button>
               <button
-                id="call-btn"
-                class="btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
+                class="btn-call btn btn-neutral !border-none w-1/2 !bg-[#00A63E] text-[#ffffff]"
               >
                 <span><i class="fa-solid fa-phone"></i></span>Call
               </button>
