--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emergency Service Directory</title>
-
+    <!-- Fav icon link -->
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <!-- css link -->
     <link rel="stylesheet" href="./style/style.css" />
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <!-- Tailwind cdn here -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- font Awesome cdn here -->
